# Refract_MC

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  qodana.yaml
.claude/: settings.local.json
.github/workflows/: development-builds.yml  release-electron-bridge.yml  release-tauri.yml  release.yml  security-audit.yml
apps/electron-bridge/: package.json
apps/renderer/: electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.json
apps/renderer/src/main/: index.ts
apps/renderer/src/main/ipc/: auth.ipc.ts  curseforge.ipc.ts  external-links.ipc.ts  friends.ipc.ts  index.ts  instance.ipc.ts  minecraft.ipc.ts  modrinth.ipc.ts  mods.ipc.ts  news.ipc.ts
apps/renderer/src/main/services/: analytics.ts  auth.ts  config.ts  instance-store.ts  modpack.ts  modrinth.ts
apps/renderer/src/preload/: api.ts
apps/renderer/src/renderer/: index.html
apps/renderer/src/shared/: minecraft-news.ts
apps/tauri/: README.md  RELEASING.md  index.html  latest.json.example  package.json  vite.config.ts  vite.renderer.config.ts
apps/tauri/src/: App.tsx  index.css  tauri-api.ts
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: activity.rs  analytics.rs  auth.rs  config.rs  content.rs  external.rs  friends.rs  gamedata.rs  instances.rs  java.rs  launch.rs  lib.rs  links.rs  main.rs  mc_install.rs  modpack.rs  mods.rs  net.rs  news.rs  paths.rs  secrets.rs  servers.rs  skins.rs
locales/: README.md  en.json  uk.json
(+34 files in other folders)
