[package]
name = "refract-tauri"
version = "1.1.3"
description = "Refract Minecraft Launcher (Tauri proof-of-concept)"
edition = "2021"

# The library Tauri runs; main.rs is a thin launcher around it (Tauri v2 layout).
[lib]
name = "refract_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
